Fixed social icons/navigation overlapping footer if little content - Added 404 page flat file

--- a/static/less/global/global-content.less
+++ b/static/less/global/global-content.less
@@ -86,6 +86,7 @@
 
     .global-content {
         width: 69%;
+        min-height: 30em; // Prevent social icons/navigation overlapping footer if little content
         margin: 110px auto;
     }
 
